@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                             http://www.tuxpaint.org/
 
-                                 June 25, 2007
+                                 June 27, 2007
 
    --------------------------------------------------------------------------
 
