@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
-<p>September 14, 2002 - April 26, 2007</p>
+<p>September 14, 2002 - June 27, 2007</p>
 </center>
 
 <h2>Drawing-related</h2>
@@ -47,27 +47,29 @@ New Breed Software</p>
   comes with a small collection of example stamps.)</i></p>
 
   <p>If you don't want to install the default collection of stamps,
-  you can just create your own.  See the <a href="README.html">README
-  documentation</a> for more on creating PNG image files, TXT text
-  description files, WAV sound files, and DAT text data files that
-  make up stamps.</p>
+  you can just create your own.  See the <a href="EXTENDING.html">EXTENDING
+  TUX PAINT documentation</a> for more on creating PNG and SVG image files,
+  TXT text description files, Ogg&nbsp;Vorbis, MP3 or WAV sound files,
+  and DAT text data files that make up stamps.</p>
 
-  <p>Finally, if you install the stamps, and think they should be loading,
+  <p>Finally, if you installed stamps, and think they should be loading,
   check to see that the "nostamps" option isn't being set.
-  (Either via a "--nostamps" option to Tux&nbsp;Paint's command line, or
-  "nostamps=yes" in the configuration file.)</p>
+  (Either via a "<code>--nostamps</code>" option to Tux&nbsp;Paint's
+  command line, or "<code>nostamps=yes</code>" in the configuration file.)</p>
 
   <p>If so, either change/remove the "nostamps" option, or you can
-  override it with "--stamps" on the command line or
-  "nostamps=no" or "stamps=yes" in a configuration file.</p>
+  override it with "<code>--stamps</code>" on the command line or
+  "<code>nostamps=no</code>" or "<code>stamps=yes</code>" in a
+  configuration file.</p>
 </li>
 
 
 <ul>
 <li><em>The Magic "Fill" Tool Looks Bad</em>
   <p>Tux&nbsp;Paint is probably comparing exact pixel colors when filling.
-  This is faster, but looks worse.  Run the command "tuxpaint --version"
-  from a command line, and you should see, amongst the other output:
+  This is faster, but looks worse.  Run the command
+  "<code>tuxpaint&nbsp;--version</code>" from a command line, and you should
+  see, amongst the other output:
   "Low Quality Flood Fill enabled".</p>
 
   <p>To change this, you must rebuild Tux&nbsp;Paint from source.
@@ -101,7 +103,8 @@ New Breed Software</p>
 <ul>
 <li><em>Stamp thumbnails in the Stamp Selector look bad</em>
   <p>Tux&nbsp;Paint was probably compiled with the faster, lower quality
-  thumbnail code enabled.  Run the command:  "tuxpaint --version" from
+  thumbnail code enabled.  Run the command:
+  "<code>tuxpaint&nbsp;--version</code>" from
   a command line.  If, amongst the other output, you see the text:
   "Low Quality Thumbnails enabled", then this is what's happening.</p>
 
@@ -122,7 +125,8 @@ New Breed Software</p>
 
 <li><em>The color picker buttons are ugly squares, not pretty buttons!</em>
   <p>Tux&nbsp;Paint was probably compiled with the nice looking color
-  selector buttons disabled.  Run the command:  "tuxpaint --version" from
+  selector buttons disabled.  Run the command:
+  "<code>tuxpaint&nbsp;--version</code>" from
   a command line.  If, amongst the other output, you see the text:
   "Low Quality Color Selector enabled", then this is what's happening.</p>
 
@@ -140,19 +144,20 @@ New Breed Software</p>
   <p>The "uppercase" option is on.</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it an "--uppercase" option.</p>
+  not giving it an "<code>--uppercase</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--uppercase" is listed as a
+  properties of the icon to see if "<code>--uppercase</code>" is listed as a
   command-line argument.</p>
 
-  <p>If "--uppercase" isn't being sent on the command line, check
+  <p>If "<code>--uppercase</code>" isn't being sent on the command line, check
   Tux&nbsp;Paint's configuration file ("~/.tuxpaintrc" under Linux and Unix,
-  "tuxpaint.cfg" under Windows) for a line reading:  "uppercase=yes".</p>
+  "tuxpaint.cfg" under Windows) for a line reading:
+  "<code>uppercase=yes</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--mixedcase", which will override the uppercase
-  setting.</p>
+  command-line argument: "<code>--mixedcase</code>", which will override
+  the uppercase setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
   "Show Uppercase Text Only" (under "Languages") is not checked.</p>
@@ -167,20 +172,21 @@ New Breed Software</p>
   <li><i>Linux and Unix users: Make sure the locale is available</i></li>
     <p>Make sure the locale you want is available.  Check your
     "/etc/locale.gen" file.  See the
-    <a href="README.html">README documentation</a> for the locales
-    Tux&nbsp;Paint uses (especially when using the "--lang" option).</p>
+    <a href="OPTIONS.html">OPTIONS documentation</a> for the locales
+    Tux&nbsp;Paint uses (especially when using the "<code>--lang</code>"
+    option).</p>
 
-    <p>Note: Debian users can simply run "dpkg-reconfigure locales"
+    <p>Note: Debian users can simply run "<code>dpkg-reconfigure locales</code>"
     if the locales are managed by "dpkg."</p>
 
     <ul>
-    <li>If you're using the "--lang" command-line option
-      <p>Try using the "--locale" command-line option, or your operating
-        system's locale settings (e.g., the "$LANG" environment variable), and
-        please e-mail us regarding your trouble.</p>
+    <li>If you're using the "<code>--lang</code>" command-line option
+      <p>Try using the "<code>--locale</code>" command-line option,
+      or your operating system's locale settings (e.g., the "<code>$LANG</code>"
+      environment variable), and please e-mail us regarding your trouble.</p>
     </li>
 
-    <li>If you're using the "--locale" command-line option
+    <li>If you're using the "<code>--locale</code>" command-line option
       <p>If this doesn't work, please e-mail us regarding your trouble.</p>
     </li>
 
@@ -234,24 +240,26 @@ New Breed Software</p>
   <i>X</i>&nbsp;seconds.</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--printdelay=..." option.</p>
+  not giving it a "<code>--printdelay=...</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--printdelay=..." is listed as
+  properties of the icon to see if "<code>--printdelay=...</code>" is listed as
   a command-line argument.</p>
 
-  <p>If a "--printdelay=..." option isn't being sent on the command line,
+  <p>If a "<code>--printdelay=...</code>" option isn't being sent on the
+  command line,
   check Tux&nbsp;Paint's configuration file ("~/.tuxpaintrc" under Linux and
   Unix, "tuxpaint.cfg" under Windows) for a line reading:
-  "printdelay=...".</p>
+  "<code>printdelay=...</code>".</p>
 
   <p>Either remove that line, set the delay value to 0 (no delay), or
   decrease the delay to a value you prefer.  (See the
-  <a href="README.html">README documentation</a>).</p>
+  <a href="OPTIONS.html">OPTIONS documentation</a>).</p>
 
   <p>Or, you can simply run Tux&nbsp;Paint with the command-line argument:
-  "--printdelay=0", which will override the configuration file's setting,
-  and allow unlimited printing.  (You won't have to wait between prints.)</p>
+  "<code>--printdelay=0</code>", which will override the configuration
+  file's setting, and allow unlimited printing.  (You won't have to wait
+  between prints.)</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
   "Print Delay" (under "Printing") is set to "0&nbsp;seconds."</p>
@@ -261,18 +269,20 @@ New Breed Software</p>
   <p>The "no print" option is on.</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--noprint" option.</p>
+  not giving it a "<code>--noprint</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--noprint" is listed as an argument.</p>
+  properties of the icon to see if "<code>--noprint</code>" is listed as an
+  argument.</p>
 
-  <p>If "--noprint" isn't on the command-line, check Tux&nbsp;Paint's
+  <p>If "<code>--noprint</code>" isn't on the command-line, check
+  Tux&nbsp;Paint's
   configuration file ("~/.tuxpaintrc" under Linux and Unix, "tuxpaint.cfg"
-  under Windows) for a line reading:  "noprint=yes".</p>
+  under Windows) for a line reading:  "<code>noprint=yes</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--print", which will override the configuration
-  file's setting.</p>
+  command-line argument: "<code>--print</code>", which will override the
+  configuration file's setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
   "Allow Printing" (under "Printing") is checked.</p>
@@ -281,22 +291,50 @@ New Breed Software</p>
 
 <h2>Saving</h2>
 <ul>
+<li><em>Where are my pictures?</em>
+  <p>Unless you asked Tux&nbsp;Paint to save into a specific location
+  (using the 'savedir' option), Tux&nbsp;Paint saves into a standard
+  location on your local drive:</p>
+
+  <ul>
+  <li>Windows<br>
+    In the user's "Application&nbsp;Data" folder:<br>
+    e.g., <code>C:\Documents and Settings\<i>Username</i>\Application Data\TuxPaint\saved</code><br>
+
+  <li>Mac OS X<br>
+    In the user's "Application&nbsp;Support" folder:<br>
+    e.g., <code>/Users/<i>Username</i>/Library/Applicaton Support/TuxPaint/saved/</code><br>
+
+  <li>Linux / Unix<br>
+    In the user's <code>$HOME</code> directory, under a ".tuxpaint"
+    subfolder:<br>
+    e.g., <code>/home/<i>username</i>/.tuxpaint/saved/</code><br>
+  </ul>
+
+  <p>The images are stored as PNG bitmaps, which most modern programs
+  should be able to load (image editors, word processors, web browsers,
+  etc.)</p>
+
+</li>
+
 <li><em>Tux&nbsp;Paint always saves over my old picture!</em>
   <p>The "save over" option is enabled.  (This disables the prompt
   that would appear when you click 'Save.')</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--saveover" option.</p>
+  not giving it a "<code>--saveover</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--saveover" is listed as an argument.</p>
+  properties of the icon to see if "<code>--saveover</code>" is listed as an
+  argument.</p>
 
-  <p>If "--saveover" isn't on the command-line, check Tux&nbsp;Paint's
+  <p>If "<code>--saveover</code>" isn't on the command-line, check
+  Tux&nbsp;Paint's
   configuration file ("~/.tuxpaintrc" under Linux and Unix, "tuxpaint.cfg"
-  under Windows) for a line reading:  "saveover=yes".</p>
+  under Windows) for a line reading:  "<code>saveover=yes</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--saveoverask", which will override the
+  command-line argument: "<code>--saveoverask</code>", which will override the
   configuration file's setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
@@ -310,18 +348,19 @@ New Breed Software</p>
   that would appear when you click 'Save.')</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--saveovernew" option.</p>
+  not giving it a "<code>--saveovernew</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--saveovernew" is listed as an
+  properties of the icon to see if "<code>--saveovernew</code>" is listed as an
   argument.</p>
 
-  <p>If "--saveovernew" isn't on the command-line, check Tux&nbsp;Paint's
+  <p>If "<code>--saveovernew</code>" isn't on the command-line, check
+  Tux&nbsp;Paint's
   configuration file ("~/.tuxpaintrc" under Linux and Unix, "tuxpaint.cfg"
-  under Windows) for a line reading:  "saveover=new".</p>
+  under Windows) for a line reading:  "<code>saveover=new</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--saveoverask", which will override the
+  command-line argument: "<code>--saveoverask</code>", which will override the
   configuration file's setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
@@ -345,10 +384,12 @@ New Breed Software</p>
         'blocking' Tux&nbsp;Paint from accessing your sound device)
     <li>(Unix/Linux) Are you using a sound system, such as aRts, ESD or
       GStreamer?  If so, try setting the "SDL_AUDIODRIVER" environment variable
-      before running Tux&nbsp;Paint (e.g., "export&nbsp;SDL_AUDIODRIVER=arts").
+      before running Tux&nbsp;Paint (e.g.,
+      "<code>export&nbsp;SDL_AUDIODRIVER=arts</code>").
       Or, run Tux&nbsp;Paint through the system's rerouter (e.g.,
-      run "artsdsp&nbsp;tuxpaint" or "esddsp&nbsp;tuxpaint", instead of
-      simply "tuxpaint").
+      run "<code>artsdsp&nbsp;tuxpaint</code>" or
+      "<code>esddsp&nbsp;tuxpaint</code>", instead of
+      simply "<code>tuxpaint</code>").
     </ul>
     
   <li><em>Is sound disabled in Tux Paint?</em>
@@ -471,18 +512,20 @@ New Breed Software</p>
   <p>The "fullscreen" option is set.</p>
 
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--fullscreen" option.</p>
+  not giving it a "<code>--fullscreen</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--fullscreen" is listed as an argument.</p>
+  properties of the icon to see if "<code>--fullscreen</code>" is listed 
+  as an argument.</p>
 
   <p>If "--fullscreen" isn't on the command-line, check Tux&nbsp;Paint's
   configuration file ("~/.tuxpaintrc" under Linux and Unix, 
-  "tuxpaint.cfg" under Windows) for a line reading:  "fullscreen=yes".</p>
+  "tuxpaint.cfg" under Windows) for a line reading:
+  "<code>fullscreen=yes</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--windowed", which will override the configuration
-  file's setting.</p>
+  command-line argument: "<code>--windowed</code>", which will override
+  the configuration file's setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
   "Fullscreen" (under "Video &amp; Sound") is not checked.</p>
@@ -497,8 +540,9 @@ New Breed Software</p>
   this means it has been launched in the last 30 seconds.
   (On Unix/Linux, this message would appear in a terminal console if you
   ran Tux&nbsp;Paint from a command-line.  On Windows, this message would
-  appear in a file named "stdout.txt" in the same folder where TuxPaint.exe
-  resides (e.g., C:\Program&nbsp;Files\TuxPaint).</p>
+  appear in a file named "<code>stdout.txt</code>" in the same folder where
+  <code>TuxPaint.exe</code> resides (e.g., in
+  <code>C:\Program&nbsp;Files\TuxPaint</code>).</p>
 
   <p>A lockfile ("~/.tuxpaint/lockfile.dat" on Linux and Unix,
   "userdata\lockfile.dat" on Windows) is used to make sure Tux&nbsp;Paint
@@ -513,41 +557,44 @@ New Breed Software</p>
   (e.g., on a shared network drive), then you'll need to disable this
   feature.</p>
 
-  <p>To disable the lockfile, add the "--nolockfile" argument to
+  <p>To disable the lockfile, add the "<code>--nolockfile</code>" argument to
   Tux&nbsp;Paint's command-line.</p>
 </li>
 
 <li><em>I can't quit Tux&nbsp;Paint</em>
   <p>The "noquit" option is set.  This disables the "Quit" button in
   Tux&nbsp;Paint's toolbar (greying it out), and prevents Tux&nbsp;Paint from
-  being quit using the [Escape] key.</p>
+  being quit using the <b>[Escape]</b> key.</p>
 
   <p>If Tux&nbsp;Paint is not in fullscreen mode, simply click the
   window close button on Tux&nbsp;Paint's title bar.
   (i.e., the "(x)" at the upper right.)</p>
 
   <p>If Tux&nbsp;Paint is in fullscreen mode, you will need to use the
-  [Shift] + [Control] + [Escape] sequence on the keyboard to
+  <b>[Shift] + [Control] + [Escape]</b> sequence on the keyboard to
   quit Tux&nbsp;Paint.</p>
 
   <p>(Note: with or without "noquit" set, you can always use the
-  [Alt] + [F4] combination on your keyboard to quit Tux&nbsp;Paint.)</p>
+  <b>[Alt] + [F4]</b> combination on your keyboard to quit Tux&nbsp;Paint.)</p>
 </li>
 
 <li><em>I don't want "noquit" mode enabled!</em>
   <p>If you're running Tux&nbsp;Paint from a command-line, make sure you're
-  not giving it a "--noquit" option.</p>
+  not giving it a "<code>--noquit</code>" option.</p>
 
   <p>If you're running Tux&nbsp;Paint by double-clicking an icon, check the
-  properties of the icon to see if "--noquit" is listed as an argument.</p>
+  properties of the icon to see if "<code>--noquit</code>" is listed as an
+  argument.</p>
 
-  <p>If "--noquit" isn't on the command-line, check Tux&nbsp;Paint's
+  <p>If "<code>--noquit</code>" isn't on the command-line, check
+  Tux&nbsp;Paint's
   configuration file ("~/.tuxpaintrc" under Linux and Unix, 
-  "tuxpaint.cfg" under Windows) for a line reading:  "noquit=yes".</p>
+  "tuxpaint.cfg" under Windows) for a line reading:
+  "<code>noquit=yes</code>".</p>
 
   <p>Either remove that line, or simply run Tux&nbsp;Paint with the
-  command-line argument: "--quit", which will override the configuration file's
-  setting.</p>
+  command-line argument: "<code>--quit</code>", which will override the
+  configuration file's setting.</p>
 
   <p>Or use Tux&nbsp;Paint&nbsp;Config. and make sure
   "Disable Quit Button and [Escape] Key" (under "Simplification")
