@@ -23,7 +23,7 @@ New Breed Software</p>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>June 25, 2007</p>
+<p>June 27, 2007</p>
 
 
 </center>
